# DockYard-Evolution-Agent-Arena-Private

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  run_env.py
agents/: heuristic_agent.py  lm_studio_agent.py  random_agent.py
data/solutions/: atsea-sample-shop_solutions.md
env/: __init__.py  actions.py  engine.py  logs.py  reward.py  state.py
env/domains/: __init__.py  base.py  java.py  rust.py
runner/: inference.py  server.py
scenarios/agent_meta/: broken_inference.json
scenarios/java/: easy.json  hard.json  medium.json
scenarios/rust/: easy.json  extra_hard.json  hard.json  medium.json
server/: app.py
solutions/: rust_dashboard_solutions.md
tools/: validate_scenario.py
